@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rvu.1,v 1.2 2005/01/21 00:52:59 greg Exp $"
+.\" RCSid "$Id: rvu.1,v 1.3 2005/06/13 20:07:55 greg Exp $"
 .TH RVU 1 1/1/04 RADIANCE
 .SH NAME
 rvu - generate RADIANCE images interactively
@@ -288,6 +288,7 @@ medium sampling (ms),
 pixel sample (ps),
 pixel threshold (pt),
 back face visibility (bv),
+random sampling (R),
 specular jitter (sj), and
 specular threshold (st).
 Once a variable has been changed, the "new" command can be used
