@@ -1470,3 +1470,6 @@ Switched default options in rtrace to use Russian roulette.  (Rpict and rvu
 still use biased ray termination.)
 
 Added rtcontrib -r option to recover partial output.
+
+Added -R rendering option for pure Monte Carlo sampling.
+(Got rid of -DMC compile option, whicht his makes superfluous.)
